# rubix-service

./: .gitignore  CHANGELOG.md  README.md  VERSION  docker.sh  pyproject.toml  requirements.txt  run.py  script.bash  smon.postman_collection.json  test.py  test2.py  wsgi.py
.github/workflows/: docker-build-release.yml  pr-build.yml  release-build.yml  release-delivery.yml
config/: app.example.json  apps.json  apps.master.json  config.example.json  logging.example.conf  logging.prod.example.conf
docker/: Dockerfile  build.Dockerfile  build.alpine.Dockerfile  runtime.Dockerfile
logging/: logging.conf
migrations/: migration.py
migrations/versions/: __001_file_to_tiny_db.py
src/: __init__.py  app.py  background.py  envs.py  inheritors.py  model.py  reverse_proxy_routes.py  routes.py  server.py  setting.py  token.py
src/bios/: utils.py
src/bios/resources/: clear_app_state.py
src/discover/: remote_device_registry.py
src/discover/resources/: remote_device.py
src/gw_mqtt/: resource_gw_mqtt.py
src/models/: enum.py  model_base.py
src/models/device/: model_device.py
src/models/user/: model_user.py
src/mrb_listener/: resource_mrb_listener.py  schema_mrb_listener.py
src/platform/: model_base.py  model_wires_plat.py  resource_device_info.py  resource_wires_plat.py  schema_device_info.py  schema_wires_plat.py  utils.py
src/proxy/: master_proxy_routes.py  reverse_proxy_routes.py  slave_proxy_routes.py  slaves_broadcast_proxy_routes.py  slaves_multicast_proxy_routes.py
src/resources/: resource_device.py  resource_user.py  utils.py
src/resources/rest_schema/: schema_device.py  schema_user.py
src/slaves/resources/: slaves_base.py  slaves_plural.py  slaves_singular.py
src/system/: services.py
src/system/apps/: __init__.py  bacnet_server_app.py  lora_raw_app.py  point_server_app.py  rubix_plat_app.py  rubix_plat_build_app.py  wires_builds_app.py
src/systemd/: systemd.py
src/users/: authorize_users.py  model_users.py  resource_login_users.py  resource_users.py  schema_users.py
systemd/: nubeio-app-ff-go-app-service.service  nubeio-app-service.service  nubeio-c-app-service.service  nubeio-go-app-service.service  nubeio-py-app-service.service  nubeio-rubix-service.old-template.service  nubeio-rubix-service.service  nubeio-rubix-service.template.service  nubeio-s-mon.service
templates/: nubeio-rubix-service.template.service  systemd.template.service
(+97 files in other folders)
