[tool.poetry]
name = "rubix-service"
version = "1.22.0"
description = "Install service via systemd"
authors = ["NubeIO"]

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
requests = "^2.25.1"
netifaces = "^0.10.9"
gunicorn = "^20.0.4"
click = "^7.1.2"
packaging = "^20.8"
PyJWT = "^2.0.1"
rubix-registry = { git = "https://github.com/NubeIO/rubix-registry", rev = "v1.2.0" }
rubix-http = { git = "https://github.com/NubeIO/rubix-http", rev = "v1.3.0" }
Flask = "1.1.2"
gevent = "^21.1.2"
Flask-SQLAlchemy = "2.4.4"
SQLAlchemy = "1.3.23"
mqtt-rest-bridge = { git = "https://github.com/NubeIO/mqtt-rest-bridge", rev = "v1.8.2" }

[tool.poetry.dev-dependencies]
pyinstaller = "4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
